--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'BrainappCoreBundle:Template:template_default.html.twig' %}
 
 {% block stylesheets %}
 	{{ parent() }}
@@ -7,38 +7,7 @@
     {% endstylesheets %}
 {% endblock  %}
 
-{% block body %}
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle" type="button">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#page-top" class="navbar-brand">Brainapp</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden active">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#login"><i class="fa fa-fw fa-lock"></i> Login</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-	{# HEADER #}
+{% block content %}
     <header>
         <div class="container">
             <div class="row">
@@ -47,7 +16,7 @@
                     <div class="intro-text">
                         <span class="name">Brainapp</span>
                         <hr class="star-light">
-                        <span class="skills">Webbasiertes Haushaltsbuch</span>
+                        <span class="subtitle">Das webbasierte Haushaltsbuch</span>
                     </div>
                 </div>
             </div>
@@ -68,60 +37,7 @@
             </div>
 		</div>
     </section>
-    
-	{# FOOTER #}
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer col-md-8">
-                        <h3>Projektgruppe KMI14/WI14</h3>
-                        <p><strong>Brainapp</strong> entstand im Rahmer einer studentischen Projektarbeit der Hochschule für Telekommunikation Leipzig (HfTL) durch die Studentengruppe KMI14/WI14</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-{#                         <h3>Around the Web</h3>#}
-{#                         <ul class="list-inline">#}
-{#                             <li>#}
-{#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-facebook"></i></a>#}
-{#                             </li>#}
-{#                             <li>#}
-{#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-google-plus"></i></a>#}
-{#                             </li>#}
-{#                             <li>#}
-{#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-twitter"></i></a>#}
-{#                             </li>#}
-{#                             <li>#}
-{#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-linkedin"></i></a>#}
-{#                             </li>#}
-{#                             <li>#}
-{#                                 <a class="btn-social btn-outline" href="#"><i class="fa fa-fw fa-dribbble"></i></a>#}
-{#                             </li>#}
-{#                         </ul>#}
-                    </div>
-                    <div class="footer-col col-md-3 col-md-offset-1">
-                    	<img alt="" src="{{ asset('bundles/brainappcore/images/hftl-logo-n.png') }}" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; Brainapp 2015
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll visible-xs visble-sm">
-        <a href="#page-top" class="btn btn-primary">
-            <i class="fa fa-chevron-up"></i>
-        </a>
-    </div>
-{% endblock body %}
+{% endblock content %}
 
 {% block javascripts %}
 	{{ parent() }}
