--- a/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
@@ -27,6 +27,7 @@ footer {
     color: #fff;
 }
 footer h3 {
+    font-family: "open-sans-semibold",Arial,Helvetica,sans-serif;
     margin-bottom: 30px;
 }
 footer .footer-above {
