--- a/src/Brainapp/CoreBundle/Resources/public/css/default_navbar.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_navbar.css
@@ -38,7 +38,7 @@
 }
 
 .navbar-default {
-    background: #2c3e50;
+    background: #3A3A3C;
     border-color: transparent;
 }
 .navbar-default .navbar-brand {
@@ -46,7 +46,7 @@
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
     background-color: transparent;
-    color: #18bc9c;
+    color: #408F9A;
 }
 .navbar-default .navbar-text {
     color: #777777;
@@ -56,7 +56,7 @@
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     background-color: transparent;
-    color: #18bc9c;
+    color: #408F9A;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     background: #1a242f;
