--- a/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
@@ -2,7 +2,8 @@
 
 body {
     overflow-x: hidden;
-    color: #2c3e50;
+    color: #3A3A3C;
+/*     color: #2c3e50; */
 }
 p {
     font-size: 20px;
@@ -11,7 +12,7 @@ p.small {
     font-size: 16px;
 }
 a, a:hover, a:focus, a:active, a.active {
-    color: #18bc9c;
+    color: #408F9A;
     outline: 0 none;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -31,7 +32,7 @@ footer h3 {
     margin-bottom: 30px;
 }
 footer .footer-above {
-    background-color: #2c3e50;
+    background-color: #3A3A3C;
     padding-top: 50px;
 }
 footer .footer-col {
