added Dashboard view

--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,8 @@
 
 {% block stylesheets %}
 	{{ parent() }}
-	{% stylesheets 'bundles/brainappcore/css/index.css' filter="cssrewrite" %}
+	{% stylesheets  'bundles/brainappcore/css/default_template.css'
+					'bundles/brainappcore/css/index.css' filter="cssrewrite" %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock  %}
