--- a/src/Brainapp/CoreBundle/Resources/views/Template/Navbar/navbar_default_user.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Template/Navbar/navbar_default_user.html.twig
@@ -12,12 +12,13 @@
         <div class="navbar-collapse collapse" id="navbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#">Einstellungen</a></li>
+            <li><a href="#">Profil</a></li>
+            <li><a href="#">Hilfe</a></li>
+            <li><a href="{{ path('logout') }}"><i class="fa fa-fw fa-power-off"></i> Logout</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <input type="text" placeholder="Search..." class="form-control">
+            <input type="text" placeholder="Suchbegriff eingeben..." class="form-control">
           </form>
         </div>
       </div>
