--- a/src/Brainapp/CoreBundle/Resources/public/css/default_style.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_style.css
@@ -5,27 +5,46 @@ body {
 .sub-header {
     border-bottom: 1px solid #eee;
     padding-bottom: 10px;
+    margin-top: 15px;
 }
+
+/** TOP NAVBAR **/
 .navbar-fixed-top {
     border: 0 none;
+    color: #fff;
 }
+@media (min-width: 768px) {
+    .navbar-fixed-top {
+        padding: 5px 0;
+        transition: padding 0.3s ease 0s;
+    }
+    .navbar-fixed-top .navbar-brand {
+        font-size: 2em;
+        transition: all 0.3s ease 0s;
+    }
+    .navbar-fixed-top.navbar-shrink .navbar-brand {
+        font-size: 1.5em;
+    }
+}
+
+/** LEFT SIDEBAR **/
 .sidebar {
     display: none;
 }
 @media (min-width: 768px) {
-.sidebar {
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-    bottom: 0;
-    display: block;
-    left: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 20px;
-    position: fixed;
-    top: 51px;
-    z-index: 1000;
-}
+	.sidebar {
+	    background-color: #f5f5f5;
+	    border-right: 1px solid #eee;
+	    bottom: 0;
+	    display: block;
+	    left: 0;
+	    overflow-x: hidden;
+	    overflow-y: auto;
+	    padding: 20px;
+	    position: fixed;
+	    top: 51px;
+	    z-index: 1000;
+	}
 }
 .nav-sidebar {
     margin-bottom: 20px;
@@ -37,10 +56,13 @@ body {
     padding-right: 20px;
 }
 .nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
-    background-color: #428bca;
+    background-color: #408F9A;
     color: #fff;
 }
+
+/** CONTENT main **/
 .main {
+	margin-top: 5px;
     padding: 20px;
 }
 @media (min-width: 768px) {
@@ -52,17 +74,57 @@ body {
 .main .page-header {
     margin-top: 0;
 }
-.placeholders {
-    margin-bottom: 30px;
-    text-align: center;
+
+.navbar a:focus {
+    outline: 0 none;
 }
-.placeholders h4 {
-    margin-bottom: 0;
-}
-.placeholder {
+.navbar-inverse {
+    background-color: #3a3a3c;
+    border-color: #080808;
     margin-bottom: 20px;
+    min-height: 50px;
 }
-.placeholder img {
-    border-radius: 50%;
-    display: inline-block;
+.navbar-inverse .navbar-brand {
+    letter-spacing: 1px;
+    color: #fff;
 }
+.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
+    background-color: transparent;
+    color: #408F9A;
+}
+.navbar-inverse .navbar-text {
+    color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #9d9d9d;
+    font-family: "open-sans-regular",Arial,Helvetica,sans-serif;
+}
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: transparent;
+    color: #408F9A;
+}
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    background-color: #080808;
+    color: #fff;
+}
+.navbar-inverse .navbar-nav > .disabled > a, .navbar-inverse .navbar-nav > .disabled > a:hover, .navbar-inverse .navbar-nav > .disabled > a:focus {
+    background-color: transparent;
+    color: #444;
+}
+.navbar-inverse .navbar-toggle {
+    border-color: #333;
+}
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+    background-color: #333;
+}
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #fff;
+}
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: #101010;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    background-color: #080808;
+    color: #fff;
+}
+
