--- a/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
@@ -12,11 +12,23 @@
 {% block body %}
 
 {% block navbar %} {# NAVBAR #}
-{% include 'BrainappCoreBundle:Template/Navbar:navbar_default.html.twig' %}
+	{% include 'BrainappCoreBundle:Template/Navbar:navbar_default.html.twig' %}
 {% endblock navbar %}
 
 
 {% block content %}
+<div class="container-fluid">
+      <div class="row">
+      	{# SIDEBAR nav #}
+      	<div class="col-sm-3 col-md-2 sidebar collapse">
+			{% include 'BrainappCoreBundle:Template/Navbar:sidebar_default.html.twig' %}
+		</div>
+		{# MAIN block #}
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        	{% block main %}{% endblock %}
+        </div>
+	</div>
+</div>
 {% endblock content %}
 
 {# FOOTER #}
