--- a/src/Brainapp/CoreBundle/Resources/public/css/index.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/index.css
@@ -71,6 +71,9 @@ header .intro-text .subtitle {
 	    padding-bottom: 100px;
 	    padding-top: 200px;
 	}
+	header .container .form-box{
+	   margin-top: -50px;
+	}
 	header .intro-text .name {
 	    font-size: 4.75em;
 	}
