--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -4,6 +4,7 @@
 	{{ parent() }}
 	{% stylesheets  'bundles/brainappcore/css/default_template.css'
 					'bundles/brainappcore/css/default_navbar.css'
+					'bundles/brainappcore/css/default_form.css'
 					'bundles/brainappcore/css/index.css' filter="cssrewrite" %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
     {% endstylesheets %}
@@ -13,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-7">
                     <img alt="" src="{{ asset('bundles/brainappcore/images/brain-icon.png') }}" class="img-responsive">
                     <div class="intro-text">
                         <span class="name">Brainapp</span>
@@ -21,6 +22,7 @@
                         <span class="subtitle">Das webbasierte Haushaltsbuch</span>
                     </div>
                 </div>
+                {% include 'BrainappUserBundle:Security:register_form.html.twig' %}
             </div>
         </div>
     </header>
