--- a/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/default_template.css
@@ -39,6 +39,6 @@ footer .footer-col {
     margin-bottom: 50px;
 }
 footer .footer-below {
-    background-color: #233140;
+    background-color: #408F9A;
     padding: 25px 0;
 }
