added new registration form to index

--- a/src/Brainapp/UserBundle/Resources/views/Security/register_form.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/register_form.html.twig
@@ -2,7 +2,7 @@
 	<div class="form-top">
 		<div class="form-top-left">
 			<h3>Jetzt <span class="text-success">KOSTENLOS</span> registrieren</h3>
-			<p>Fülle das Formular aus und erhalte sofortigen Zugang:</p>
+			<p>Fülle das Formular aus und erhalte sofort Zugang:</p>
 		</div>
 		<div class="form-top-right">
 			<i class="fa fa-pencil"></i>
@@ -11,26 +11,20 @@
 	<div class="form-bottom">
 		<form class="registration-form" method="post" action="" role="form">
 			<div class="form-group">
-				<label for="form-first-name" class="sr-only">First name</label> <input
-					type="text" id="form-first-name"
-					class="form-first-name form-control" placeholder="First name..."
-					name="form-first-name">
+				<label for="username" class="sr-only">Benutzername</label> 
+				<input type="text" id="username" class="form-control" placeholder="Benutzername..." name="username">
 			</div>
 			<div class="form-group">
-				<label for="form-last-name" class="sr-only">Last name</label> <input
-					type="text" id="form-last-name" class="form-last-name form-control"
-					placeholder="Last name..." name="form-last-name">
+				<label for="email" class="sr-only">E-Mail Adresse</label> 
+				<input type="text" id="email" class="form-control" placeholder="E-Mail Adresse..." name="email">
 			</div>
 			<div class="form-group">
-				<label for="form-email" class="sr-only">Email</label> <input
-					type="text" id="form-email" class="form-email form-control"
-					placeholder="Email..." name="form-email">
+				<label for="password" class="sr-only">Passwort</label> 
+				<input type="password" id="password" class="form-control" placeholder="Passwort" value="" name="password">
 			</div>
 			<div class="form-group">
-				<label for="form-about-yourself" class="sr-only">About yourself</label>
-				<textarea id="form-about-yourself"
-					class="form-about-yourself form-control"
-					placeholder="About yourself..." name="form-about-yourself"></textarea>
+				<label for="password" class="sr-only">Passwort wiederholen</label> 
+				<input type="password" id="password_retype" class="form-control" placeholder="Passwort wiederholen" value="" name="password_retype">
 			</div>
 			<button class="btn btn-info btn-block" type="submit">Registrieren!</button>
 			<a href="#login" class="btn btn-default btn-block">Bereits registriert?</a>
