--- a/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
@@ -27,7 +27,7 @@
 				<input type="password" id="password_retype" class="form-control" placeholder="Passwort wiederholen" value="" name="password_retype">
 			</div>
 			<button class="btn btn-info btn-block" type="submit">Registrieren!</button>
-			<a href="#login" class="btn btn-default btn-block">Bereits registriert?</a>
+			<a href="#login" class="btn btn-default btn-block page-scroll">Bereits registriert?</a>
 		</form>
 	</div>
 </div>
