--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -22,7 +22,7 @@
                         <span class="subtitle">Das webbasierte Haushaltsbuch</span>
                     </div>
                 </div>
-                {% include 'BrainappUserBundle:Registration:register_form.html.twig' %}
+                {% render url('registration_register') %}
             </div>
         </div>
     </header>
