--- a/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
@@ -1,3 +1,5 @@
+{% use "bootstrap_3_layout.html.twig" %}
+{% set label_attr = { 'class': 'sr-only' } %}
 <div class="col-sm-5 form-box">
 	<div class="form-top">
 		<div class="form-top-left">
@@ -9,25 +11,8 @@
 		</div>
 	</div>
 	<div class="form-bottom">
-		<form class="registration-form" method="post" action="" role="form">
-			<div class="form-group">
-				<label for="username" class="sr-only">Benutzername</label> 
-				<input type="text" id="username" class="form-control" placeholder="Benutzername..." name="username">
-			</div>
-			<div class="form-group">
-				<label for="email" class="sr-only">E-Mail Adresse</label> 
-				<input type="text" id="email" class="form-control" placeholder="E-Mail Adresse..." name="email">
-			</div>
-			<div class="form-group">
-				<label for="password" class="sr-only">Passwort</label> 
-				<input type="password" id="password" class="form-control" placeholder="Passwort" value="" name="password">
-			</div>
-			<div class="form-group">
-				<label for="password" class="sr-only">Passwort wiederholen</label> 
-				<input type="password" id="password_retype" class="form-control" placeholder="Passwort wiederholen" value="" name="password_retype">
-			</div>
-			<button class="btn btn-info btn-block" type="submit">Registrieren!</button>
+		{{ form(form, { 'attr': { 'novalidate': 'novalidate'} }) }}
 			<a href="#login" class="btn btn-default btn-block page-scroll">Bereits registriert?</a>
-		</form>
 	</div>
 </div>
+
