attempted to add error message on index page

--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 
 {% block content %}
     <header>
-        <div class="container"> Test
+        <div class="container">
             <div class="row">
                 <div class="col-lg-7">
                     <img alt="" src="{{ asset('bundles/brainappcore/images/brain-icon.png') }}" class="img-responsive">
