--- a/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Registration/register_form.html.twig
@@ -1,6 +1,6 @@
 {% use "bootstrap_3_layout.html.twig" %}
 {% set label_attr = { 'class': 'sr-only' } %}
-<div class="col-sm-5 form-box">
+<div class="col-lg-5 col-md-5 col-xs-12 form-box">
 	<div class="form-top">
 		<div class="form-top-left">
 			<h3>Jetzt <span class="text-success">KOSTENLOS</span> registrieren</h3>
