--- a/src/Brainapp/CoreBundle/Resources/public/css/index.css
+++ b/src/Brainapp/CoreBundle/Resources/public/css/index.css
@@ -56,6 +56,7 @@ header img {
 
 header .intro-text{
 	font-family: "open-sans-regular",Arial,Helvetica,sans-serif;
+	margin-bottom: 50px;
 }
 header .intro-text .name {
     display: block;
@@ -73,9 +74,6 @@ header .intro-text .subtitle {
 	header .container {
 	    padding-bottom: 100px;
 	    padding-top: 200px;
-	}
-	header .container .form-box{
-	   margin-top: -50px;
 	}
 	header .intro-text .name {
 	    font-size: 4.75em;
