--- a/src/Brainapp/UserBundle/Resources/views/Security/login_widget.html.twig
+++ b/src/Brainapp/UserBundle/Resources/views/Security/login_widget.html.twig
@@ -1,4 +1,4 @@
-<div id="login-overlay" class="col-xs-8 col-xs-offset-2" style="margin-top: 0;">
+<div id="login-overlay" class="col-lg-8 col-lg-offset-2 col-xs-12" style="margin-top: 0;">
 	<div class="modal-content">
 		<div class="modal-body">
 			<div class="row">
@@ -23,14 +23,14 @@
 								</label>
 								<p class="help-block"></p>
 							</div>
-							<button type="submit" id="submit" name="_submit" class="btn btn-success btn-block btn-lg">Login</button>
+							<button type="submit" id="submit" name="_submit" class="btn btn-success btn-block">Login</button>
 							<a href="{{ path('resetting_request') }}" class="btn btn-default btn-block">Passwort vergessen?</a>
 						</form>
 					</div>
 				</div>
 				
 				<div class="col-xs-6">
-					<p class="lead">Jetzt <span class="text-success">KOSTENLOS</span> registrieren</p>
+					<p class="lead">Noch kein Account?<br />Jetzt <span class="text-success">KOSTENLOS</span> registrieren</p>
 					<ul class="list-unstyled" style="line-height: 2">
 						<li><span class="fa fa-check text-success"></span> See all your orders</li>
 						<li><span class="fa fa-check text-success"></span> Fast re-order</li>
@@ -40,7 +40,7 @@
 						<li><a href="/read-more/"><u>Mehr erfahren...</u></a></li>
 					</ul>
 					
-					<p><a href="/new-customer/" class="btn btn-info btn-block">Ja, ich möchte mich jetzt registrieren!</a></p>
+					<p class="page-scroll"><a href="#page-top" class="btn btn-info btn-block">Ja, ich möchte mich jetzt registrieren!</a></p>
 				</div>
 			</div>
 		</div>
