moved navbar templates

--- a/src/Brainapp/CoreBundle/Resources/views/Dashboard/default_dashboard.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Dashboard/default_dashboard.html.twig
@@ -11,7 +11,7 @@
 
 {# override NAVBAR top #}
 {% block navbar %} 
-{% include 'BrainappCoreBundle:Template/Navbar:navbar_default_user.html.twig' %}
+{% include 'BrainappCoreBundle:Navbar:navbar_default_user.html.twig' %}
 {% endblock navbar %}
 
 {# override MAIN-BLOCK #}
