--- a/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Template/template_default.html.twig
@@ -12,7 +12,7 @@
 {% block body %}
 
 {% block navbar %} {# NAVBAR #}
-	{% include 'BrainappCoreBundle:Template/Navbar:navbar_default.html.twig' %}
+	{% include 'BrainappCoreBundle:Navbar:navbar_default.html.twig' %}
 {% endblock navbar %}
 
 
@@ -21,7 +21,7 @@
       <div class="row">
       	{# SIDEBAR nav #}
       	<div class="col-sm-3 col-md-2 sidebar">
-			{% include 'BrainappCoreBundle:Template/Navbar:sidebar_default.html.twig' %}
+			{% include 'BrainappCoreBundle:Navbar:sidebar_default.html.twig' %}
 		</div>
 		{# MAIN block #}
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
