--- a/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Brainapp/CoreBundle/Resources/views/Default/index.html.twig
@@ -23,11 +23,14 @@
                     </div>
                 </div>
                 	{# Formular für Registrierung einbinden #}
-                	{% include 'BrainappUserBundle:Registration:register_form.html.twig' with { 'form': form_registration, 'csrf_token': csrf_token_registration } %}
+                	{% include 'BrainappUserBundle:Registration:register_form.html.twig' with { 'form': form_registration, 'csrf_token': csrf_token_registration} %}
             </div>
         </div>
     </header>
 
+   {% if modal_login %}
+    {% include 'BrainappUserBundle:Security:login_modal.html.twig' with { 'csrf_token': csrf_token_login } %}
+   {% else %}
 	{# SECTION LOGIN #}
 	<section id="login">
         <div class="container">
@@ -39,11 +42,14 @@
                 <div class="col-lg-12">
 {#                 	{% include 'BrainappUserBundle:Security:login_form_box.html.twig' with { 'csrf_token': csrf_token_login } %}#}
                 	{% include 'BrainappUserBundle:Security:login_widget.html.twig' with { 'csrf_token': csrf_token_login } %}
+                	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#loginModal">
+                      login modal
+                    </button>
                 </div>
             </div>
 		</div>
     </section>
-{# 	{% include 'BrainappUserBundle:Security:modal_login.html.twig' with { 'csrf_token': csrf_token_login } %}#}
+   {% endif %}
 {% endblock content %}
 
 {% block javascripts %}
@@ -51,4 +57,9 @@
     {% javascripts '@jqueryui_js' '@BrainappCoreBundle/Resources/public/js/classie.js' '@BrainappCoreBundle/Resources/public/js/default.js' %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
+    {% if modal_login %}
+    {% javascripts '@BrainappUserBundle/Resources/public/js/modal_login.js' %}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    {% endif %}
 {% endblock %}
